--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -71,7 +71,7 @@ ul.first-ul a {
 
 .mobile-menu {
     font-size: calc(1.3rem + .6vw) !important;
-    color: #ab863d;
+    color: #df9b19;
 }
 
 header {
@@ -81,13 +81,13 @@ header {
 }
 
 .btn-theme {
-    background-color: #ab863d !important;
+    background-color: #df9b19 !important;
     color: #ffffff !important;
     cursor: pointer;
 }
 
 .text-theme {
-    color: #ab863d !important;
+    color: #df9b19 !important;
 }
 
 .banner-statistics .first-offer
