--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -66,7 +66,8 @@ ul.first-ul a {
 }
 
 .header-area .container {
-    width: 80% !important;
+    /* width: 80% !important; */
+    width: 100% !important;
 }
 
 .mobile-menu {
@@ -90,15 +91,14 @@ header {
     color: #df9b19 !important;
 }
 
-.banner-statistics .first-offer
-{
+.banner-statistics .first-offer {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 
 }
 
 
-.banner-statistics .second-offer{
+.banner-statistics .second-offer {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
