--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -102,3 +102,234 @@ header {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+
+
+/* Ensure the search bar is positioned correctly */
+.search {
+    position: relative;
+    width: 40px;
+    height: 40px;
+
+    box-shadow: 0 4px 24px hsla(222, 68%, 12%, 0.1);
+    border-radius: 4rem;
+    padding: 10px;
+    overflow: hidden;
+    transition: width 0.5s cubic-bezier(0.9, 0, 0.3, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Input styling */
+.search__input {
+    border: none;
+    outline: none;
+    width: 100%;
+    /* Full width within the container */
+    height: 100%;
+    border-radius: 4rem;
+    padding-left: 14px;
+    font-family: var(--body-font);
+    font-size: var(--small-font-size);
+    font-weight: 500;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 1.5s;
+}
+
+/* Search button styling */
+.search__button {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 10px;
+    margin: auto;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    transition: transform 0.6s cubic-bezier(0.9, 0, 0.3, 0.9);
+}
+
+.search__icon,
+.search__close {
+    color: var(--white-color);
+    font-size: 1.5rem;
+    position: absolute;
+    transition: opacity 0.5s cubic-bezier(0.9, 0, 0.3, 0.9);
+}
+
+.search__close {
+    opacity: 0;
+    /* Hidden by default */
+}
+
+/* When search bar expands */
+.show-search {
+    width: 100%;
+}
+
+.show-search .search__input {
+    opacity: 1;
+    pointer-events: initial;
+}
+
+.show-search .search__button {
+    transform: rotate(90deg);
+}
+
+.show-search .search__icon {
+    opacity: 0;
+}
+
+.show-search .search__close {
+    opacity: 1;
+}
+
+/*=============== BREAKPOINTS ===============*/
+@media screen and (min-width: 576px) {
+    .show-search {
+        width: 450px;
+        /* Larger width for medium screens */
+    }
+}
+
+.shimmer-bar {
+    animation: shimmer 5s infinite;
+}
+
+.shimmer-bar2 {
+    animation: shimmer2 2s infinite;
+}
+
+@keyframes shimmer {
+    0% {
+        opacity: 0.9;
+        transform: scale(0);
+    }
+
+    10% {
+        opacity: 0.7;
+        transform: none;
+    }
+
+    20% {
+        opacity: 0.5;
+        transform: none;
+    }
+
+    30% {
+        opacity: 0.3;
+        transform: none;
+    }
+
+    40% {
+        opacity: 0.2;
+        transform: none;
+    }
+
+    50% {
+        opacity: 0.1;
+        transform: none;
+    }
+
+    60% {
+        opacity: 0.1;
+        transform: none;
+    }
+
+    70% {
+        opacity: 0.3;
+        transform: none;
+    }
+
+    80% {
+        opacity: 0.5;
+        transform: none;
+    }
+
+    90% {
+        opacity: 0.7;
+        transform: none;
+    }
+
+    100% {
+        opacity: 0.9;
+        transform: none;
+    }
+}
+
+@keyframes shimmer2 {
+    0% {
+        opacity: 0.9;
+        transform: scale(0);
+    }
+
+    10% {
+        opacity: 0.7;
+        transform: none;
+    }
+
+    20% {
+        opacity: 0.5;
+        transform: none;
+    }
+
+    30% {
+        opacity: 0.3;
+        transform: none;
+    }
+
+    40% {
+        opacity: 0.2;
+        transform: none;
+    }
+
+    50% {
+        opacity: 0.1;
+        transform: none;
+    }
+
+    60% {
+        opacity: 0.1;
+        transform: none;
+    }
+
+    70% {
+        opacity: 0.3;
+        transform: none;
+    }
+
+    80% {
+        opacity: 0.5;
+        transform: none;
+    }
+
+    90% {
+        opacity: 0.7;
+        transform: none;
+    }
+
+    100% {
+        opacity: 0.9;
+        transform: none;
+    }
+}
+
+.bi-heart-fill {
+    color: #df9b19;
+}
+
+.count-rounded {
+    top: 10px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #df9b19;
+    margin: 2px auto;
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+}
