--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2355,7 +2355,7 @@ only screen and (max-width: 767.98px) {
 
 .product-action-link a:hover {
   color: #fff;
-  background-color: #df9b19;
+  background-color: #737373;
 }
 
 .product-action-link a:nth-child(2) {
@@ -2467,7 +2467,7 @@ only screen and (max-width: 767.98px) {
 
 .product-link-2 a:hover {
   color: #fff;
-  background-color: #df9b19;
+  background-color: #888888;
 }
 
 /*-------- product small item end --------*/
