--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -95,6 +95,7 @@ img {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin-top: 45px;
 }
 
 button {
