--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -23,6 +23,44 @@ ul.first-ul {
     justify-content: space-between;
 }
 
+#header-wr {
+    flex-direction: column;
+    margin: 0;
+    max-width: 100%;
+    overflow: auto;
+    padding: 15px 0;
+    width: 100%;
+}
+
+#header-wr li {
+    border-bottom: 1px solid #e2e2e2;
+    display: block;
+    float: none;
+    padding-bottom: 10px;
+}
+
+
+#header-wr li a {
+    padding-left: 7px !important;
+    text-decoration: none;
+    padding-right: 7px !important;
+    font-family: "lato-bold";
+    font-size: 14px;
+    letter-spacing: .5px;
+    align-items: center;
+    display: flex;
+    gap: 10px;
+    margin: 0;
+    padding: 15px 13px;
+    width: calc(100% - 35px);
+    border-bottom: 0 solid #000 !important;
+    cursor: pointer;
+    color: #000;
+    text-transform: uppercase;
+    font-weight: 400;
+
+}
+
 .first-li-div {
     display: flex;
     align-items: center;
