--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,7 +35,7 @@ body {
   font-weight: 400;
   line-height: 1.7;
   font-size: 16px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "lato-bold";
 }
 
 a {
@@ -64,7 +64,7 @@ h6 {
   font-weight: 600;
   color: #333333;
   margin-bottom: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: "lato-bold";
 }
 
 ul {
@@ -656,7 +656,7 @@ fieldset legend {
   position: relative;
   margin-left: 20px;
   padding-left: 20px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "lato-bold";
 }
 
 .header-top-settings ul li:before {
@@ -862,7 +862,7 @@ fieldset legend {
   line-height: 1;
   text-transform: uppercase;
   border-radius: 5px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "lato-bold";
 }
 
 .main-menu ul li a i {
@@ -2313,7 +2313,7 @@ only screen and (max-width: 767.98px) {
 }
 
 .price-box {
-  font-family: "Montserrat", sans-serif;
+  font-family: "lato-bold";
   line-height: 1;
 }
 
@@ -2792,7 +2792,7 @@ only screen and (max-width: 767.98px) {
   color: #333333;
   font-size: 15px;
   font-weight: 500;
-  font-family: "Montserrat", sans-serif;
+  font-family: "lato-bold";
 }
 
 /*----- blog post item end -----*/
@@ -2890,7 +2890,7 @@ only screen and (max-width: 767.98px) {
 .comment-section ul li .comment-body h5 {
   font-size: 14px;
   padding-bottom: 5px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "lato-bold";
 }
 
 .comment-section ul li .comment-body .comment-post-date {
@@ -3008,7 +3008,7 @@ only screen and (max-width: 767.98px) {
   padding-bottom: 20px;
   display: inline-block;
   text-transform: capitalize;
-  font-family: "Montserrat", sans-serif;
+  font-family: "lato-bold";
 }
 
 @media only screen and (max-width: 575.98px) {
@@ -3090,7 +3090,7 @@ only screen and (max-width: 767.98px) {
   font-weight: 500;
   line-height: 1;
   margin-top: -3px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "lato-bold";
   text-transform: capitalize;
 }
 
@@ -3693,7 +3693,7 @@ only screen and (max-width: 767.98px) {
   font-weight: 500;
   padding-bottom: 10px;
   text-transform: capitalize;
-  font-family: "Montserrat", sans-serif;
+  font-family: "lato-bold";
 }
 
 @media only screen and (max-width: 767.98px) {
