--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28,7 +28,7 @@ Table of content
 23. footer
 -------------------------------------------------------------------*/
 /*------ Typography Style Start ------*/
-@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700,800,900|Open+Sans:300,400,600,700,800&amp;display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700,800,900|Open+Sans:300,400,600,700,800&amp;display=swap"); */
 
 body {
   color: #666666;
