--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -44,7 +44,7 @@ ul.first-ul {
     padding-left: 7px !important;
     text-decoration: none;
     padding-right: 7px !important;
-    font-family: "lato-bold";
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     letter-spacing: .5px;
     align-items: center;
