--- a/public/assets/css/plugins.css
+++ b/public/assets/css/plugins.css
@@ -3706,7 +3706,7 @@ Nice Select
     cursor: pointer;
     display: block;
     float: left;
-    font-family: "lato-bold";
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: 400;
     height: 42px;
@@ -4042,7 +4042,7 @@ Nice Select
 }
 
 .ui-widget {
-    font-family: "lato-bold";
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1em
 }
 
@@ -4054,7 +4054,7 @@ Nice Select
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-    font-family: "lato-bold";
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1em
 }
 
